@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Copy META.json and Makefile.PL from release for version bump commit
 
 0.027     2016-09-29 13:50:21 EDT
   - Use [Regenerate] instead of [CopyFilesFromBuild] to regenerate files in root
